(lang dune 3.0)

(name TAA)

(generate_opam_files true)

(source
 (github fraguinha/TAA))

(authors "João Fraga")

(maintainers "João Fraga")

(license MIT)

; (documentation https://url/to/documentation)

(package
 (name TAA)
 (synopsis "Advanced Topics in Algorithms project")
 ;(description "")
 (depends ocaml dune)
 ;(tags (topics "to describe" your project))
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
